--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.0.10",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
