--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,12 +14,15 @@ services:
       #environment: 
       #  - CHOKIDAR_USEPOLLING=true
       entrypoint: ./entrypoint/entrypoint.sh
-          
+      depends_on:
+        - db
+
       ports: 
         - 3000:3000
       # expose:
       #   - 3000   
   db:
+    container_name: db
     image: mysql:5.7
     restart: always
     environment:
